Ajout du grisé sur les déjà lu Ajout du marquage lu dès consultation d'un billet Debut d'ajout utilisation des favicon

--- a/mag/article.html
+++ b/mag/article.html
@@ -33,7 +33,7 @@
         </div>
 {loop="$events"}
 		{if="$_['billet']==$value->getId()"}
-        <a href="{$value->getLink()}">
+        <a href="{$value->getLink()}" target="_blank">
         <div class="row">
 			<div class="column12 ombre">
 				<h2>{$value->getTitle()}</h2>
