--- a/mag/flux.html
+++ b/mag/flux.html
@@ -44,12 +44,13 @@
             </div>
             </a>
             <div class="column3 ombre">
-                <h1><a href="index.php?view=chfolder" title"Choisissez un dossier"><img src="img/RSS-Folder-Graphite-icon.png" /><a> <a href="javascript:history.back()"><img src="img/RSS-icon.png" /></a></h1>
+                <h1><a href="index.php?view=chfolder" title"Choisissez un dossier"><img src="img/RSS-Folder-Graphite-icon.png" /><a> <a href="index.php?action=selectedFolder&folder={$currentFeed->getFolder()}&view=chflux"><img src="img/RSS-icon.png" /></a></h1>
             </div>
             <div class="column6 ombre">
                 {$currentFeed->getDescription()}
             </div>
         </div>
+        {function="FunctionsMag::navFlux($_['feed'],$currentFeed->getFolder(),$currentFeed->getName())"}
         <div class="row">
             <!--Pour le flux-->
             {loop="$events"}
